Added shadows on cards

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <ul>
-        <li class="best-seller-card">
+        <li class="best-seller-card shadow-dreamy">
             <div class="best-seller-card-plant-image plant-1"></div>
             <div class="best-seller-card-description">
                 <span class="best-seller-card-name">Kavun</span>
@@ -105,7 +105,7 @@
             </div>
         </li>
 
-        <li class="best-seller-card">
+        <li class="best-seller-card shadow-dreamy">
             <div class="best-seller-card-plant-image plant-2"></div>
             <div class="best-seller-card-description">
 
@@ -126,7 +126,7 @@
 
         </li>
 
-        <li class="best-seller-card">
+        <li class="best-seller-card shadow-dreamy">
             <div class="best-seller-card-plant-image plant-3"></div>
             <div class="best-seller-card-description">
 
