Fixed fot size on card (mobile)

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     <div class="star"></div>
                     <div class="star"></div>
                     <div class="star"></div>
+                    <div class="star"></div>
                 </div>
 
                 <div class="best-seller-card-buy-details">
